# Hexin-Pixel-Font

./: .gitignore  LICENSE.md  README.md  README.zh.md  pyproject.toml  requirements.txt
Data/: LR Combined Chars.txt  核心笑传之抄抄表.ase  核心笑传之抄抄表——《现代汉语常用字表》常用字部分.ase
Data/Charsets/: Beta Used Chars.txt  Existing Chars in Fallback Components.txt  Extremely Common Used Characters.txt
Data/Fonts/: k12x8 with GB Symbols.kbitx
Documents/: LICENSE.BSD  LICENSE.OFL  README.zh.md
Scripts/: Build.ps1  BuildChar.py  BuildFont.py  Clean.ps1  FetchCCB.py  FetchGlyphs.py  MakeCCB.py  MakeImage.py  SeeTofu.py  a.txt
src/hexin_pixel_font/: BuildChar.py  BuildFont.py  Clean.ps1  FetchCCB.py  FetchGlyphs.py  LibHexin.py  MakeCCB.py  SeeTofu.py  __main__.py
